# requestium

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  data.json  endpoint.json  pyproject.toml  requestium.py  requirements-dev.txt  requirements.txt  setup.py  test_requestium.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  dependency-review.yml  lint-python.yml  pytest.yml  python-checks.yml  python.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_de0c1859c7a9220c___init___py.html  z_de0c1859c7a9220c_requestium_mixin_py.html  z_de0c1859c7a9220c_requestium_py.html  z_de0c1859c7a9220c_requestium_response_py.html  z_de0c1859c7a9220c_requestium_session_py.html
requestium/: __init__.py  requestium.py  requestium_chrome.py  requestium_mixin.py  requestium_response.py  requestium_session.py
tests/: conftest.py  test__start_chrome_driver.py  test_cookies.py  test_ensure_elements_deprecation.py  test_mixin.py  test_requestium.py  test_session.py  test_user_agent.py
tests/resources/: test_extension.crx
